# ROSSO

./: .gitignore  Cargo.toml  LICENSE_MIT
coconut/: Cargo.toml
coconut/src/: keygen.rs  lib.rs  pok_sig.rs  signature.rs
src/: client.rs  d_idp.rs  js.rs  js_pok_sig.rs  js_signature.rs  lib.rs  rp.rs  ttp.rs
tests/: e2e.rs
